--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "persona;-website",
+  "name": "personal-website",
   "compatibility_date": "2025-07-21",
   "assets": {
     "directory": "./dist"
